--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,15 @@
 runtime: nodejs20
-env: standard
 
 # Comando que o App Engine deve rodar ao subir a sua app:
-entrypoint: npm run start
+entrypoint: node dist/main.js
 
 # (Opcional) Variáveis de ambiente
 env_variables:
   NODE_ENV: 'production'
-# (Opcional) Escalonamento básico — 1 instância mínima para arranque mais rápido
-# automatic_scaling:
-#   min_instances: 0
-#   max_instances: 2
+  LOG_BITRIX_LIB: false
+  PORT: 8080
+  GOOGLE_CLOUD_PROJECT:
+  BITRIX_WEBHOOK_URL:
+  BITRIX_WEBHOOK_USER_ID:
+automatic_scaling:
+  max_instances: 1
