--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:dev": "tsc -p tsconfig.build.json --watch & nodemon dist/main.js",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "deploy": "./deploy.sh",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,6 +25,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@datamize-io/bitrix-lib-node": "github:datamize-io/bitrix-lib-node-prod#main",
+    "@google-cloud/secret-manager": "^6.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -33,7 +36,6 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@datamize-io/bitrix-lib-node": "github:datamize-io/bitrix-lib-node#main",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
